syntax = "proto3";

package echo;

option go_package = "./echo;echo";

service Streams {
  rpc Call(CallRequest) returns (CallResponse);
  rpc AuthorizedCall(CallRequest) returns (CallResponse);
}

message CallRequest { string name = 1; }

message CallResponse {
  string msg = 1;
  bytes payload = 2;
}
